--- a/style.css
+++ b/style.css
@@ -5,18 +5,24 @@
 * {
   margin: 0;
   padding: 0;
+  font-weight: bold;
 }
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color: slategrey;
 }
 
 html {
   scroll-behavior: smooth;
 }
+.about-me-summary{
+  text-align: justify;
+}
 
 p {
-  color: rgb(85, 85, 85);
+  /* color: rgb(85, 85, 85); */
+  font-size:large;
 }
 
 /* TRANSITION */
@@ -52,14 +58,14 @@ a {
 }
 
 a:hover {
-  color: grey;
-  text-decoration: underline;
-  text-underline-offset: 1rem;
-  text-decoration-color: rgb(181, 181, 181);
+  color:white;
+  /* text-decoration: underline; */
+  /* text-underline-offset: 1rem;
+  text-decoration-color: rgb(181, 181, 181); */
 }
 
 .logo {
-  font-size: 2rem;
+  font-size: 4rem;
 }
 
 .logo:hover {
@@ -231,7 +237,7 @@ section {
 
 .btn-color-1,
 .btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
+  border: rgb(83, 74, 74) 0.1rem solid;
 }
 
 .btn-color-1:hover,
@@ -242,15 +248,15 @@ section {
 .btn-color-1,
 .btn-color-2:hover {
   background: rgb(53, 53, 53);
-  color: white;
+  color:black;
 }
 
 .btn-color-1:hover {
-  background: rgb(0, 0, 0);
+  background:white;
 }
 
 .btn-color-2 {
-  background: none;
+  background: white;
 }
 
 .btn-color-2:hover {
@@ -296,10 +302,10 @@ section {
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: white;
+  background: rgb(199, 190, 190);
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  border-color: rgb(27, 23, 23);
   text-align: center;
 }
 
@@ -321,7 +327,7 @@ section {
 }
 
 .experience-sub-title {
-  color: rgb(85, 85, 85);
+  color:rgb(43, 39, 39);
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
