--- a/style.css
+++ b/style.css
@@ -438,5 +438,9 @@ footer p {
 }
 
 .profile_pic1{
+  max-width: 300px;
+  min-width: 300px;
+  max-height: 300px;
+  min-height: 300px;
   border-radius: 50%;
 }
